SDEV-1635: add filter to priorities to return only fail or warn actions (#12754)